--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.1",
+    "@tanstack/react-query": "^5.62.8",
+    "autoprefixer": "^10.4.20",
+    "ethers": "^6.13.4",
+    "next": "15.1.2",
+    "postcss": "^8.4.49",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "viem": "2.x",
+    "vite-plugin-windicss": "^1.9.4",
+    "wagmi": "^2.14.4",
+    "windicss": "^3.5.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5",
+    "windicss-webpack-plugin": "^1.8.0"
   }
 }
