--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.1",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.5.0",
+    "@remix-run/node": "^2.15.2",
+    "@remix-run/react": "^2.15.2",
     "@tanstack/react-query": "^5.62.8",
     "autoprefixer": "^10.4.20",
     "ethers": "^6.13.4",
